--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,23 @@
 
 }
 
+*{
+    font-family: "Poppins", sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
 body{
-    background-image: url(../images/background.png);
+    background-image: url(../images/background2.png);
     background-size: cover;
 }
 
 header{
     display: grid;
-    grid-template-columns: 1fr 2.5fr 4.5fr 1fr;
+    grid-template-columns: 1fr 2fr 4.5fr 0fr;
+    background-color: var(--Groen);
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
 }
 
 nav{
@@ -26,22 +35,17 @@ nav{
 nav :hover{
     color: var(--MainColor);
     transition: 0.5s;
-    font-size: 30px;
-    
+    font-size: 33px; 
 }
 
 a{
     text-decoration: none;
     color: var(--Wit);
-    font-size: 25px;
+    font-size: 30px;
+    font-weight: 520;
 }
 
 img{
     height: 60px;
 }
 
-.blikjes{
-    display: flex;
-    width: 15em;
-    height: 23em;
-}
