--- a/css/Aanbiedingen.css
+++ b/css/Aanbiedingen.css
@@ -20,7 +20,7 @@
 }
 
 body{
-    background-image: url(../images/tiger background.png);
+    background-image: url(../images/tiger_background.png);
     background-size: cover;
 }
 
