--- a/css/contact.css
+++ b/css/contact.css
@@ -1,10 +1,77 @@
 @charset "utf-8";
 
-:root {
-    --bgcolor: #28583155;
-    --bgcolorform: #285831de;
-    --color: #ffffff;
+@font-face {
+    font-family: 'copperplate';
+    src: url(../fonts/OPTICopperplate.otf);
 }
+
+:root{
+    --MainColor: #EF7123;
+    --Wit: #ffffff;
+    --Zwart: #000;
+    --Groen: #285831;
+
+}
+
+/* <---------Alles voor de header---------> */
+
+*{
+    font-family: "copperplate";
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    background-image: url(../images/background2.png);
+    background-size: cover;
+}
+
+header{
+    display: grid;
+    grid-template-columns: 0.2fr 2fr 5.5fr 0.2fr;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+img{
+    height: 60px;
+}
+
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    column-gap: 1em;
+}
+
+a{
+    position: relative;
+    text-decoration: none;
+    color: var(--Wit);
+    font-size: 14px;
+    padding: 0 10px;
+    font-weight: bold;
+
+}
+
+a::after{
+    content: "";
+    position: absolute;
+    background-color: var(--MainColor);
+    height: 3px;
+    width: 0%;
+    left: 0;
+    bottom: -10px;
+    transition: 0.3s;
+}
+
+a:hover:after{
+    width: 100%;
+}
+
+a:hover{
+    color: var(--MainColor);
+}
+/* <---------Eind Header---------> */
 
 form {
     background-color: var(--bgcolorform);
