--- a/css/registreren.css
+++ b/css/registreren.css
@@ -43,7 +43,7 @@ nav{
     column-gap: 1em;
 }
 
-a{
+nav a{
     position: relative;
     text-decoration: none;
     color: var(--Wit);
@@ -53,7 +53,7 @@ a{
 
 }
 
-a::after{
+nav a::after{
     content: "";
     position: absolute;
     background-color: var(--MainColor);
@@ -64,62 +64,11 @@ a::after{
     transition: 0.3s;
 }
 
-a:hover:after{
+nav a:hover:after{
     width: 100%;
 }
 
-a:hover{
+nav a:hover{
     color: var(--MainColor);
 }
 /* <---------Eind Header---------> */
-
-form {
-    background-color: var(--Groen);
-    margin-top: calc(40vh - 108px);
-    margin-left: 35vw;
-    display: flex;
-    flex-direction: column;
-    row-gap: 10px;
-    width: 30vw;
-    border-radius: 15px;
-    padding: 2px 5px;
-}
-
-#bericht {
-    background-color: var(--Wit);
-    color: var(--color);
-    height: 20vh;
-    border-radius: 10px;
-    padding-left: 8px;
-    padding-right: 8px;
-    resize: none;
-    font-size: 16px;
-    border: solid 2px black;
-}
-
-#name {
-    background-color: var(--Wit);
-    color: var(--color);
-    height: 26px;
-    border-radius: 13px;
-    padding-left: 8px;
-    padding-right: 8px;
-    font-size: 16px;
-    border: solid 2px black;
-}
-
-#submit {
-    background-color: var(--MainColor);
-    color: var(--color);
-    width: 8vw;
-    margin-left: 11vw;
-    height: 24px;
-    border-radius: 10px;
-    font-size: 16px;
-    border: solid 2px black;
-}
-
-p {
-    color: var(--color);
-    font-size: 20px;
-}
