--- a/css/kalender.css
+++ b/css/kalender.css
@@ -73,7 +73,7 @@ a:hover{
 }
 /* <---------Eind Header---------> */
 td, th {
-    border: #000000 2px solid;;
+    border: #000000 2px solid;
     color: #fff;
     background-color: #33513eda;
     text-align: center;
