--- a/css/ingelogd.css
+++ b/css/ingelogd.css
@@ -90,7 +90,9 @@ a:hover{
     position: absolute;
     margin-left: 2.5%;
     margin-top: 7%;
-    background-color: #00000080;
+    background-color: #014c0bbc;
+    opacity: 80%;
+    border: #000000 solid ; 
     width: 25vw;
     padding-left: 35vw ;
     padding-right: 35vw ;
