--- a/css/Aanbiedingen.css
+++ b/css/Aanbiedingen.css
@@ -77,3 +77,22 @@ a:hover{
     /* display: flex; */
     color: #fff;
 }
+            /* TABLE */
+
+            td, th {
+                border: #000000 2px solid;
+                color: #fff;
+                background-color: #33513eda;
+                text-align: center;
+            }
+            th {
+                background-color: #33512eed;
+                font-size: 18px;
+            }
+            table {
+                position: absolute;
+                left: 9vw;
+                top: 9vh;
+                height: 82vh;
+                width: 82vw;
+            }
