--- a/css/productinfo.css
+++ b/css/productinfo.css
@@ -93,3 +93,35 @@ table {
     height: 82vh;
     width: 82vw;
 }
+
+.main-footer{
+    margin-top: 90vh;
+    padding-left: 15em;
+    padding-right: 15em;
+    display: flex;
+    flex-direction: row;
+    gap: 5em;
+    background-color: rgba(0, 0, 0, 0.6);
+    align-items: center;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    text-align: left;
+    font-size: 12px;
+}
+
+
+
+.main-footer > article > p{
+    font-size: 1em;
+    color: var(--Wit);
+}
+
+.main-footer >article > h{
+    font-weight: bold;
+    color: var(--Wit);
+
+}
+
+.main-footer >article >p> h{
+    font-weight: bold;
+}
