--- a/css/inloggen.css
+++ b/css/inloggen.css
@@ -122,7 +122,7 @@ p{
 
 .main-footer{
     position: absolute;
-    margin-top: 5vw;
+    margin-top: 15.1vw;
     padding-left: 15em;
     padding-right: 15em;
     display: flex;
@@ -151,4 +151,15 @@ p{
 
 .main-footer >article >p> h{
     font-weight: bold;
+}
+
+
+
+#submit {
+    transition: all 0.3s ease-out;
+}
+
+#submit:hover{
+    background: #000000;
+    color: rgb(255, 115, 0);
 }
