--- a/css/bewerken.css
+++ b/css/bewerken.css
@@ -114,7 +114,7 @@ label, p {
 
 .main-footer{
     position: absolute;
-    margin-top: 2vw;
+    margin-top: 25vh;
     padding-left: 15em;
     padding-right: 15em;
     display: flex;
